# nobanashi

backend/: CHANGELOG.md  Dockerfile  nobanashi.cabal  run.sh  stack.yaml
backend/source/: .gitignore  LICENSE  README.md  nobanashi.cabal  stack.yaml
backend/source/lib/gogol-0.5.0/src/Network/Google/Internal/: Logger.hs
backend/source/lib/gogol-core-0.5.0/src/Network/Google/: Prelude.hs
backend/source/lib/gogol-core-0.5.0/src/Network/Google/Data/: JSON.hs
backend/source/src/: App.hs  DB.hs  Main.hs  Model.hs  Parser.hs  Storage.hs
backend/source/src/Storage/: GCP.hs
backend/src/: App.hs  DB.hs  Main.hs  Parser.hs
front/: .env.prod  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
front/src/: App.vue  api.ts  article.ts  config.ts  main.ts
front/src/components/: Edit.vue  FooterComponent.vue  HeaderComponent.vue  PostList.vue  Uploader.vue
front/src/page/: Contact.vue  New.vue  Post.vue  PostList.vue  Root.vue  TagList.vue  Upload.vue
