name:                nobanashi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nobanashi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable nobanashi
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       App,
                       DB,
                       Model,
                       Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       servant-server,
                       text,
                       warp,
                       wai,
                       wai-logger,
                       wai-cors,
                       wai-extra,
                       aeson,
                       containers,
                       directory,
                       bytestring,
                       http-types,
                       http-media,
                       megaparsec,
                       mmark,
                       lucid
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
